Bug 163186 - Tooltip for file path missing from Recent Documents list (kf5/kf6)
Summary: Tooltip for file path missing from Recent Documents list (kf5/kf6)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.3.0.3 release
Hardware: All Linux (All)
: low minor
Assignee: Michael Weghorn
URL:
Whiteboard: target:25.8.0
Keywords:
Depends on:
Blocks: KDE, KF5 Qt6
  Show dependency treegraph
 
Reported: 2024-09-27 22:36 UTC by alex
Modified: 2025-02-08 10:13 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot comparing correct and incorrect behaviour (187.69 KB, image/png)
2024-09-27 22:39 UTC, alex
Details

Note You need to log in before you can comment on or make changes to this bug.
Description alex 2024-09-27 22:36:07 UTC
Description:
When accessing recent documents from either File/Recent Documents or the Toolbar's Open Dropdown, entries display a tooltip with the full file path.
These tooltips are missing for me on current 24.8.0.3 under KDE/Plasma and XFCE, but are present under Windows and under ICEWM.

Steps to Reproduce:
1.Launch Libreoffice under KDE/Plasma or XFCE
2.Open a document or spreadsheet
3.Hover mouse over a recent document entry in File/Recent Documents, or by clikcing the dropdown on the toolbar Open button

Actual Results:
No tooltip is visible to display the full file path.

Expected Results:
A tooltip showing the complete file path will appear.
This is the products standard previous behaviour on all platforms, and is extremely useful when working with files in various locations.


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 480(Build:3)
CPU threads: 8; OS: Linux 6.10; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-GB (en_GB.UTF-8); UI: en-GB
Calc: threaded
Comment 1 alex 2024-09-27 22:39:54 UTC
Created attachment 196758 [details]
Screenshot comparing correct and incorrect behaviour
Comment 2 alex 2024-09-27 22:41:41 UTC
Note this is second bug I've recently encountered that seems to be KDE specific - perhaps something with QT integrations?
(prior was https://bugs.documentfoundation.org/show_bug.cgi?id=163119)
Comment 3 Buovjaga 2025-01-14 16:54:21 UTC
This feature was implemented in 4.3 with dd7a3f5fb873b77da326eb8339c2ef9e3bf4fbd1

Looks like it has never worked with the gtk and kde UIs. I tested with gtk3 even in 5.3. I was unable to run gtk2 UIs in older versions. Works fine with gen UI and on Windows.
Comment 4 Caolán McNamara 2025-01-14 19:27:18 UTC
We use the GMenuModel in gtk3 for these menus, and that doesn't support tooltips: https://gitlab.gnome.org/GNOME/gtk/-/issues/785 see bug#125076 for similar
Comment 5 Buovjaga 2025-01-15 05:23:30 UTC
Right, so for GTK3 this is a duplicate of bug 125076. What about Qt?
Comment 6 Buovjaga 2025-01-15 09:32:13 UTC
(In reply to Buovjaga from comment #5)
> Right, so for GTK3 this is a duplicate of bug 125076. What about Qt?

Seems to be possible, maybe easier with welded menu? https://stackoverflow.com/questions/60484006/how-to-include-tooltips-for-menu-items-in-qt

I'm not seeing tooltips with SAL_VCL_QT_USE_WELDED_WIDGETS=1 yet :)
Comment 7 Michael Weghorn 2025-01-15 12:53:44 UTC
(In reply to Buovjaga from comment #6)
> Seems to be possible, maybe easier with welded menu?
> https://stackoverflow.com/questions/60484006/how-to-include-tooltips-for-
> menu-items-in-qt

That approach should indeed work - independent of welding because menus are native Qt menus independent of whether or not Qt welding is used.
(They use some own pre-weld mechanism to allow for each VCL plugin/platform to use a native menu.)
Comment 8 Michael Weghorn 2025-01-17 13:30:13 UTC
Pending Gerrit change:
https://gerrit.libreoffice.org/c/core/+/180408
Comment 9 Commit Notification 2025-01-17 21:28:45 UTC
Michael Weghorn committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a108fce773d46441e30dcc14abe29751410ae4ed

tdf#163186 qt: Show menu item tooltips

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Buovjaga 2025-01-24 13:13:29 UTC
Verified, thanks

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: bebadddfb999f678a44cdc486dfd91f38e563c9f
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Comment 11 alex 2025-01-24 19:44:44 UTC
Original reporter here: I haven't had the chance to test, but thanks all involved for the rapid fix!
Comment 12 Michael Weghorn 2025-02-08 10:13:26 UTC
While Qt doesn't show tooltips for menu actions by default, I just noticed that there is a QMenu::setToolTipsVisible [1] that can be used to explicitly enable it.

Pending https://gerrit.libreoffice.org/c/core/+/181289 now uses that to simplify the initial implementation from comment 9.

[1] https://doc.qt.io/qt-6/qmenu.html#toolTipsVisible-prop