tdf#163186 qt: Show menu item tooltips

So far, the qt VCL plugins were not handling/showing
menu item tooltips, like showing the full path for
entries in the "File" -> "Recent Documents" submenu.

Implement handling so they are shown:

* Set the tooltip for the menu entry's QAction in
  QtMenu::InsertMenuItem.

* Introduce SalMenu::SetItemTooltip, override it
  in the QtMenu subclass and call it in Menu::SetTipHelpText so
  newly set tooltips are propagated to the native
  Qt menu, to keep them up to date (similar to what already
  happens e.g. for the menu entry's displayed text in
  Menu::SetItemText).

* Since Qt doesn't by default show tooltips for
  QActions used in menus, install an event filter
  on the QMenu/QMenuBar objects that handles the QEvent::ToolTip
  event to manually show a tooltip. See [1] for
  more background and a similar example using custom
  QMenu/QMenuBar subclasses instead of the
  QObject::installEventFilter/QObject::eventFilter approach
  taken in this commit.

Only show the tooltip if one was explicitly set.
QToolTip::tooltip() [2] by default returns a text
based on the action's text (with accelerator's etc.
stripped), so only show the tooltip if QToolTip::tooltip()
returns something that differs from what would be used
based simply on the text.

[1] https://forum.qt.io/topic/6821/solved-settooltip-in-qaction-menu/2
[2] https://doc.qt.io/qt-6/qaction.html#toolTip-prop

Change-Id: I1e2568d9d6e9e2baf7dcd7dffbaaabae7862b489
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180408
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins