vcl/source/window/menu.cxx
@@ -1138,6 +1138,9 @@ void Menu::SetTipHelpText( sal_uInt16 nItemId, const OUString& rStr )
 
     if ( pData )
         pData->aTipHelpText = rStr;
+
+    if (ImplGetSalMenu() && pData->pSalMenuItem)
+        ImplGetSalMenu()->SetItemTooltip(pData->pSalMenuItem.get(), rStr);
 }
 
 OUString Menu::GetTipHelpText( sal_uInt16 nItemId ) const
